# qlor

./: .gitignore  .gitmodules  _vizdoom.ini  pyproject.toml
qlor/: agent.py  autoencoder.py  base_trainer.py  checkpoint_manager.py  epsilon.py  main.py  main_trl.py  metric.py  metrics_manager.py  replay_buffer.py  trainer.py  utils.py
qlor/models/: agent.py  env_model.py
qlor/modules/: checkpoint_manager.py  hyperparameters.py  metrics_manager.py  tensor_stack.py
qlor/replay_buffer/: replay_buffer.py
qlor/trainer/: base_trainer.py  trainer.py
tests/modules/: test_tensor_stack.py
